--- a/survey/method-tests/sentiment_analysis.Rmd
+++ b/survey/method-tests/sentiment_analysis.Rmd
@@ -49,7 +49,7 @@ What places would you want to visit with your robot avatar and what kind of acti
 ## Word cloud
 ```{r, fig.width=12,fig.asp=0.5}
 
-df <- Telerobot_sorted %>% 
+df <- Telerobot_ages_filtered %>% 
   dplyr::filter(v == "IL") %>%
   select("Q_TELEROBOT_VS_F2F_TRANS") %>%
   drop_na() 
@@ -58,12 +58,12 @@ df <- Telerobot_sorted %>%
   unnest_tokens(word, "Q_TELEROBOT_VS_F2F_TRANS") %>%
   anti_join(stop_words) %>%
   count(word) %>%
-  filter(!grepl("(do[es]*n['’]t)|(person)|(robot)|(meeting)", .$word)) %>%
+  filter(!grepl("(do[es]*n['’]t)|(person)|(robot)|(meeting)|(it['’]s)", .$word)) %>%
   with(wordcloud(word, n, max.words = 100, scale = c(5,1), colors=brewer.pal(8, "Dark2")))
   #arrange(desc(n))
 
 
-df <- Telerobot_sorted %>% 
+df <- Telerobot_ages_filtered %>% 
   dplyr::filter(v == "PS") %>%
   select("Q_TELEROBOT_VS_F2F_TRANS") %>%
   drop_na()
